file(GLOB_RECURSE SOURCE_FILES
     RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     *.cpp)

file(GLOB_RECURSE HEADER_FILES
     RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     *.h)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(${ENGINE_LIB_NAME} STATIC GL/glew.c ${SOURCE_FILES} ${HEADER_FILES})
